--- a/network/ssh.html
+++ b/network/ssh.html
@@ -46,12 +46,12 @@
                 <p>En resumen, SSH es la elección más segura y recomendada para la comunicación y administración remota en entornos Linux y Windows. Proporciona cifrado de datos y autenticación sólida, protegiendo la información de posibles amenazas. Por otro lado, Telnet, aunque todavía se encuentra en uso en algunos casos, es menos seguro debido a la falta de cifrado en la transmisión de datos. Siempre es importante priorizar la seguridad de tus comunicaciones y elegir la opción que mejor se adapte a tus necesidades.</p>
                 <p>Puedes utilizar SSH y Telnet para conectarte a una variedad de dispositivos y sistemas remotos en una red.</p>
                 <h2>Conexiones</h2>
-                <ul>
-                    <li><marcador class="resaltado18">Servidores Linux y Unix:</marcador> Puedes conectarte a servidores Linux y sistemas Unix para administrarlos, ejecutar comandos, transferir archivos y realizar tareas de configuración.</li>
-                    <li><marcador class="resaltado18">Dispositivos de Red:</marcador> Muchos dispositivos de red, como enrutadores, switches y firewalls, admiten conexiones SSH para su administración y configuración.</li>
-                    <li><marcador class="resaltado18">Hospedaje en la Nube:</marcador> Muchos proveedores de servicios en la nube permiten el acceso SSH a las instancias virtuales, lo que te permite administrar tus recursos de manera segura.</li>
-                    <li><marcador class="resaltado18">Máquinas Virtuales:</marcador> Si estás ejecutando máquinas virtuales en plataformas como VMware o VirtualBox, puedes conectarte a ellas a través de SSH.</li>
-                    <li><marcador class="resaltado18">Git Repositorios:</marcador> Puedes utilizar SSH para acceder y administrar repositorios Git, lo que facilita la colaboración en proyectos de desarrollo.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ <marcador class="resaltado8">Servidores Linux y Unix:</marcador> Puedes conectarte a servidores Linux y sistemas Unix para administrarlos, ejecutar comandos, transferir archivos y realizar tareas de configuración.</li>
+                    <li>∘ <marcador class="resaltado8">Dispositivos de Red:</marcador> Muchos dispositivos de red, como enrutadores, switches y firewalls, admiten conexiones SSH para su administración y configuración.</li>
+                    <li>∘ <marcador class="resaltado8">Hospedaje en la Nube:</marcador> Muchos proveedores de servicios en la nube permiten el acceso SSH a las instancias virtuales, lo que te permite administrar tus recursos de manera segura.</li>
+                    <li>∘ <marcador class="resaltado8">Máquinas Virtuales:</marcador> Si estás ejecutando máquinas virtuales en plataformas como VMware o VirtualBox, puedes conectarte a ellas a través de SSH.</li>
+                    <li>∘ <marcador class="resaltado8">Git Repositorios:</marcador> Puedes utilizar SSH para acceder y administrar repositorios Git, lo que facilita la colaboración en proyectos de desarrollo.</li>
                 </ul>
                 <h2>Telnet</h2>
                 <p>Telnet, por otro lado, es un protocolo más antiguo que permite la comunicación entre dispositivos a través de la red, pero carece del nivel de seguridad que ofrece SSH. Los datos transmitidos a través de Telnet no están cifrados, lo que puede dejarlos vulnerables a ataques.</p>
@@ -124,10 +124,10 @@
                     <li><marcador class="resaltado9">Conexión Establecida:</marcador> Si el desafío coincide, el servidor sabe que el cliente tiene la clave privada correspondiente y permite la conexión segura.</li>
                 </ol>  
                 <h2>Ventajas de las Claves Públicas y Privadas</h2>
-                <ul>
-                    <li><marcador class="resaltado18">Mayor Seguridad:</marcador> Las claves públicas y privadas proporcionan una autenticación más segura que las contraseñas. No se envían contraseñas por la red, lo que minimiza el riesgo de interceptación.</li>
-                    <li><marcador class="resaltado18">Sin Contraseñas:</marcador> Los usuarios no necesitan ingresar contraseñas cada vez que se conectan, lo que agiliza el proceso y reduce la posibilidad de ataques de fuerza bruta.</li>
-                    <li><marcador class="resaltado18">Fácil Gestión:</marcador> Las claves públicas pueden ser distribuidas en varios servidores, lo que permite el acceso seguro a múltiples sistemas sin la necesidad de recordar diferentes contraseñas.</li>
+                <ul style="list-style-type: none;">
+                    <li>∘ <marcador class="resaltado8">Mayor Seguridad:</marcador> Las claves públicas y privadas proporcionan una autenticación más segura que las contraseñas. No se envían contraseñas por la red, lo que minimiza el riesgo de interceptación.</li>
+                    <li>∘ <marcador class="resaltado8">Sin Contraseñas:</marcador> Los usuarios no necesitan ingresar contraseñas cada vez que se conectan, lo que agiliza el proceso y reduce la posibilidad de ataques de fuerza bruta.</li>
+                    <li>∘ <marcador class="resaltado8">Fácil Gestión:</marcador> Las claves públicas pueden ser distribuidas en varios servidores, lo que permite el acceso seguro a múltiples sistemas sin la necesidad de recordar diferentes contraseñas.</li>
                 </ul>
                 <div class="contenedor">
                     <div class="etiqueta">
