--- a/ia/transformers.html
+++ b/ia/transformers.html
@@ -68,12 +68,12 @@
                 </div>
                 <h2>Aspectos Importantes de Transformers</h2>
                 <ul style="list-style-type: none;">
-                    <li>🔷 <marcador class="resaltado8">Atención Posicional:</marcador> Los transformers incorporan información sobre la posición de las palabras o elementos en una secuencia mediante la adición de vectores de posición a las representaciones de entrada. Esto permite al modelo entender el orden de los elementos.</li>
-                    <li>🔷 <marcador class="resaltado8">Escalabilidad:</marcador> Los transformers son altamente escalables y pueden entrenarse en modelos gigantes con millones o incluso miles de millones de parámetros, lo que los hace adecuados para tareas de procesamiento de lenguaje natural a gran escala.</li>
-                    <li>🔷 <marcador class="resaltado8">Transferencia de Aprendizaje:</marcador> Los modelos pre-entrenados, como BERT y GPT, se han convertido en bloques de construcción fundamentales para muchas aplicaciones de aprendizaje profundo. Los modelos pre-entrenados se afinan (fine-tune) para tareas específicas con conjuntos de datos más pequeños.</li>
-                    <li>🔷 <marcador class="resaltado8">Atención Global:</marcador> Los transformers pueden considerar relaciones globales entre elementos en una secuencia, en lugar de depender únicamente de relaciones locales, como en las redes convolucionales.</li>
-                    <li>🔷 <marcador class="resaltado8">Paralelización:</marcador> Debido a su capacidad para procesar secuencias completas de datos de una sola vez, los transformers se pueden paralelizar eficientemente en hardware moderno, lo que acelera el entrenamiento y la inferencia.</li>
-                    <li>🔷 <marcador class="resaltado8">Avances en Visión por Computadora:</marcador> La aplicación de transformers en tareas de visión por computadora ha llevado a avances significativos, como Vision Transformers (ViTs), que rivalizan con las redes convolucionales en la clasificación de imágenes y la detección de objetos.</li>
+                    <li>🌀 <marcador class="resaltado8">Atención Posicional:</marcador> Los transformers incorporan información sobre la posición de las palabras o elementos en una secuencia mediante la adición de vectores de posición a las representaciones de entrada. Esto permite al modelo entender el orden de los elementos.</li>
+                    <li>🌀 <marcador class="resaltado8">Escalabilidad:</marcador> Los transformers son altamente escalables y pueden entrenarse en modelos gigantes con millones o incluso miles de millones de parámetros, lo que los hace adecuados para tareas de procesamiento de lenguaje natural a gran escala.</li>
+                    <li>🌀 <marcador class="resaltado8">Transferencia de Aprendizaje:</marcador> Los modelos pre-entrenados, como BERT y GPT, se han convertido en bloques de construcción fundamentales para muchas aplicaciones de aprendizaje profundo. Los modelos pre-entrenados se afinan (fine-tune) para tareas específicas con conjuntos de datos más pequeños.</li>
+                    <li>🌀 <marcador class="resaltado8">Atención Global:</marcador> Los transformers pueden considerar relaciones globales entre elementos en una secuencia, en lugar de depender únicamente de relaciones locales, como en las redes convolucionales.</li>
+                    <li>🌀 <marcador class="resaltado8">Paralelización:</marcador> Debido a su capacidad para procesar secuencias completas de datos de una sola vez, los transformers se pueden paralelizar eficientemente en hardware moderno, lo que acelera el entrenamiento y la inferencia.</li>
+                    <li>🌀 <marcador class="resaltado8">Avances en Visión por Computadora:</marcador> La aplicación de transformers en tareas de visión por computadora ha llevado a avances significativos, como Vision Transformers (ViTs), que rivalizan con las redes convolucionales en la clasificación de imágenes y la detección de objetos.</li>
                 </ul>
                 <br>
                 <p>Los transformers son una arquitectura de aprendizaje profundo versátil y poderosa que ha impulsado avances significativos en una variedad de campos. Su capacidad para capturar relaciones a largo plazo, procesar secuencias de datos y buscar características en otras entradas los convierte en una herramienta fundamental en la caja de herramientas del aprendizaje profundo.</p>
@@ -126,13 +126,13 @@
                 <h2>Aplicaciones en Aprendizaje Profundo</h2>
                 <p>Los transformers han habilitado una serie de avances en el aprendizaje profundo y se aplican en diversas áreas, incluyendo:</p>
                 <ul style="list-style-type: none;">
-                    <li>🔷 <marcador class="resaltado8">Procesamiento del Lenguaje Natural (NLP):</marcador> Para tareas de traducción automática, resumen de texto, análisis de sentimientos, chatbots y más.</li>
-                    <li>🔷 <marcador class="resaltado8">Visión por Computadora:</marcador> Para la clasificación de imágenes, la detección de objetos y la segmentación de imágenes.</li>
-                    <li>🔷 <marcador class="resaltado8">Procesamiento de Audio:</marcador> En el reconocimiento de voz, la generación de voz y la transcripción de audio.</li>
-                    <li>🔷 <marcador class="resaltado8">Recomendación:</marcador> Para sistemas de recomendación en plataformas de streaming y comercio electrónico.</li>
-                    <li>🔷 <marcador class="resaltado8">Biomedicina:</marcador> En tareas como el procesamiento de texto médico y la extracción de información de registros médicos.</li>
-                    <li>🔷 <marcador class="resaltado8">Juegos:</marcador> En el desarrollo de agentes de IA para juegos y juegos generados por IA.</li>
-                    <li>🔷 <marcador class="resaltado8">Modelos de Lenguaje Multilingüe:</marcador> Que abordan desafíos de procesamiento de lenguaje en varios idiomas.</li>
+                    <li>∘ <marcador class="resaltado8">Procesamiento del Lenguaje Natural (NLP):</marcador> Para tareas de traducción automática, resumen de texto, análisis de sentimientos, chatbots y más.</li>
+                    <li>∘ <marcador class="resaltado8">Visión por Computadora:</marcador> Para la clasificación de imágenes, la detección de objetos y la segmentación de imágenes.</li>
+                    <li>∘ <marcador class="resaltado8">Procesamiento de Audio:</marcador> En el reconocimiento de voz, la generación de voz y la transcripción de audio.</li>
+                    <li>∘ <marcador class="resaltado8">Recomendación:</marcador> Para sistemas de recomendación en plataformas de streaming y comercio electrónico.</li>
+                    <li>∘ <marcador class="resaltado8">Biomedicina:</marcador> En tareas como el procesamiento de texto médico y la extracción de información de registros médicos.</li>
+                    <li>∘ <marcador class="resaltado8">Juegos:</marcador> En el desarrollo de agentes de IA para juegos y juegos generados por IA.</li>
+                    <li>∘ <marcador class="resaltado8">Modelos de Lenguaje Multilingüe:</marcador> Que abordan desafíos de procesamiento de lenguaje en varios idiomas.</li>
                 </ul>
                 <div class="blog-image">
                     <img src="media/transformers3.jpg" alt="">
