--- a/hacking/anonimato.html
+++ b/hacking/anonimato.html
@@ -63,7 +63,7 @@
                 <h6>Cambiador de Dirección MAC (macchanger)</h6>
                 
                 <p>Macchanger es una herramienta de línea de comandos disponible en sistemas basados en Linux que permite a los usuarios cambiar la dirección MAC de sus interfaces de red, lo que puede dificultar que los sitios web y las redes rastreen tu dispositivo a través de esta identificación única. La dirección MAC (Media Access Control) es un identificador único que se utiliza para identificar dispositivos en una red. Cambiar la dirección MAC de tu dispositivo puede proporcionar un mayor nivel de anonimato y seguridad al navegar por la red. Linux y algunas otras plataformas ofrecen comandos incorporados para cambiar la dirección MAC.</p>
-                <p>El siguiente comando se utiliza para mostrar la lista de direcciones MAC (Media Access Control) que se pueden utilizar como valores de dirección MAC aleatorios o específicos. Este comando muestra las direcciones MAC que están disponibles para usar en el sistema y que son compatibles con el formato esperado para las direcciones MAC.</p>
+                <p>❏ El siguiente comando se utiliza para mostrar la lista de direcciones MAC (Media Access Control) que se pueden utilizar como valores de dirección MAC aleatorios o específicos. Este comando muestra las direcciones MAC que están disponibles para usar en el sistema y que son compatibles con el formato esperado para las direcciones MAC.</p>
                 <div id="terminal">
                     <section id="terminal__bar">
                         <div id="bar__buttons">
@@ -105,7 +105,7 @@ Num    MAC        Vendor
                 <p>El comando <marcardor class="subrayado">macchanger -l | grep -i Sony</marcardor> devuelve todas las direcciones MAC que contienen el término "Sony" en la descripción, lo que permite identificar y filtrar rápidamente las direcciones MAC relacionadas con dispositivos de Sony en el sistema.</p>
                 <br>
                 <p>Para ver la dirección MAC actual de una interfaz de red, puedes usar el siguiente comando (Para ver el nombre de las interfaces de red, puedes utilizar el comando <marcador class="subrayado">ifconfig</marcador>) :</p>
-                <p>Reemplaza "nombre_de_interfaz" por el nombre de la interfaz de red que deseas usar, como "eth0" o "wlan0".</p>
+                <p>❏ Reemplaza "nombre_de_interfaz" por el nombre de la interfaz de red que deseas usar, como "eth0" o "wlan0".</p>
                 <!-- <div id="container"> -->
             <div id="terminal">
                 <!-- Terminal Bar -->
@@ -136,7 +136,7 @@ Permanent MAC: aa:bb:cc:dd:ee:ff (unknown)
             <!-- </div> -->
 
                 <br>
-                <p>A continuación se muestra una forma en la que puedes cambiar la dirección MAC de una interfaz de red de forma aleatoria, pero tienes que detener los procesos que podrían estar utilizando la interfaz antes de ejecutar el comando. Intenta desactivar manualmente la interfaz de red usando el comando <marcador class="subrayado">sudo ifconfig wlan0 down</marcador> y luego ejecuta el comando macchanger.</p>
+                <p>❏ A continuación se muestra una forma en la que puedes cambiar la dirección MAC de una interfaz de red de forma aleatoria, pero tienes que detener los procesos que podrían estar utilizando la interfaz antes de ejecutar el comando. Intenta desactivar manualmente la interfaz de red usando el comando <marcador class="subrayado">sudo ifconfig wlan0 down</marcador> y luego ejecuta el comando macchanger.</p>
                 <p>No olvides volver a habilitar la interfaz después de realizar los cambios con el siguiente comando: <marcador class="subrayado">sudo ifconfig wlan0 up</marcador>.</p>
                 <div id="terminal">
                     <section id="terminal__bar">
@@ -163,7 +163,7 @@ New MAC:       e6:06:77:f0:cf:5a (unknown)
                     </section>
                 </div>
                 <br>
-                <p>Si deseas establecer manualmente una dirección MAC específica, puedes hacerlo con el siguiente comando:</p>
+                <p>❏ Si deseas establecer manualmente una dirección MAC específica, puedes hacerlo con el siguiente comando:</p>
                 <p>Reemplaza "XX:XX:XX:XX:XX:XX" por la dirección MAC que deseas usar.</p>
                 <div id="terminal">
                     <section id="terminal__bar">
@@ -190,7 +190,7 @@ New MAC:       aa:bb:cc:aa:bb:cc (unknown)
                     </section>
                 </div>
                 <br>
-                <p>Para restaurar la dirección MAC original de una interfaz, puedes utilizar el siguiente comando:</p>
+                <p>❏ Para restaurar la dirección MAC original de una interfaz, puedes utilizar el siguiente comando:</p>
                 <div id="terminal">
                     <section id="terminal__bar">
                         <div id="bar__buttons">
